--- a/web/styles.css
+++ b/web/styles.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html,
@@ -31,22 +30,6 @@ strong {
     font-weight: bold;
 }
 
-/* #csv {
-    font-family: monospace;
-    font-size: 10px;
-    width: 100%;
-    max-width: 100%;
-    min-width: 100%;
-    height: 400px;
-    max-height: 400px;
-    min-height: 400px;
-    border: 0;
-    border-top: 1px solid #d2d2d2;
-    background: #ccc;
-    margin-top: 50px;
-} */
-
-
 .clear {
     position: absolute;
     top: 2px;
@@ -63,9 +46,13 @@ strong {
     position: relative;
 }
 
-#date-range{
+#date-range {
+    min-width: 240px;
     max-width: 240px;
+    text-align: center;
 }
+
+
 
 #tab-content {
     padding: 0 10px;
@@ -196,6 +183,7 @@ strong {
     display: table-cell;
 }
 
+
 #chart {
     top: 0;
     position: sticky;
@@ -210,14 +198,14 @@ strong {
     display: none;
 }
 
-#chart .count  {
+#chart .count {
     position: absolute;
     left: 0;
     z-index: 5;
     top: -10px;
 }
 
-#chart .zoom  {
+#chart .zoom {
     position: absolute;
     right: 0;
     z-index: 5;
@@ -574,11 +562,55 @@ rgb(255 241 242)
     border-left: none;
 }
 
-/* 
-RED 1: #e72727
-RED 2: #db999a
-BLUE 1: #046eab
-BLUE 2: #b3e5fc
 
-GRAY: #d2d2d2
-*/
+.offcanvas-body {
+    font-size: 14px;
+}
+
+
+#off-canvas-syntax {
+    --bs-offcanvas-width: 50%
+}
+
+@media (max-width: 767.98px) {
+    #date-range {
+        width: 100%;
+        max-width: unset;
+        border-radius: 0;
+        margin-bottom: 3px;
+    }
+
+    #expression {
+        width: 100%;
+        border-radius: 0;
+        margin-left: 0;
+        margin-bottom: 3px;
+    }
+
+    #expression-help-button {
+        margin-left: 0;
+        border-radius: var(--bs-border-radius);
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .inputs {
+        justify-content: center;
+    }
+
+    #tab-content {
+        height: calc(100vh - 262px);
+    }
+
+    #event-attributes {
+        width: 80%;
+    }
+
+    #tab-content>table td:nth-child(4) {
+        display: none;
+    }
+
+    #off-canvas-syntax {
+        --bs-offcanvas-width: 90%
+    }
+}
